# latin-squares-diploma-itmo

./: .gitmodules  README.md  runIncremental.sh
incremental/: Makefile  incremental.cpp
latin-square-generator/: .gitignore  build.gradle.kts  settings.gradle.kts
latin-square-generator/src/main/java/: Cnf_maker_new.java  Oto.java
latin-square-generator/src/main/kotlin/: main.kt
localsearch/: CMakeLists.txt  main.cpp
localsearch/cnf/: CNF.cpp  CNF.h  Clause.cpp  Clause.h  Literal.cpp  Literal.h  MetaVariable.cpp  MetaVariable.h
localsearch/net/: Net.cpp  Net.h  Node.cpp  Node.h
localsearch/solver/: HillClimbingSolver.cpp  HillClimbingSolver.h
localsearch/utils/: thread_pool.hpp  utils.cpp  utils.h
painless-v2/: Makefile  README
painless-v2/glucose/core/: Solver.cc  Solver.h
painless-v2/glucose/parallel/: mk.sh
painless-v2/mapleCOMSPS/: Makefile
painless-v2/painless-src/: Makefile  painless.cpp
painless-v2/painless-src/clauses/: ClauseBuffer.h  ClauseDatabase.cpp  ClauseManager.h
painless-v2/painless-src/sharing/: HordeSatSharing.cpp  SimpleSharing.cpp
painless-v2/painless-src/solvers/: GlucoseSyrup.cpp  GlucoseSyrup.h  Lingeling.cpp  Lingeling.h  Maple.cpp  Maple.h  MiniSat.cpp  MiniSat.h  SolverFactory.cpp  SolverFactory.h  SolverInterface.h
painless-v2/painless-src/utils/: SatUtils.cpp  System.cpp
painless-v2/painless-src/working/: CubeAndConquer.cpp  CubeAndConquer.h  DivideAndConquer.cpp  DivideAndConquer.h  Portfolio.cpp  SequentialWorker.cpp  SequentialWorker.h  SimpleWorkingQueue.cpp  SimpleWorkingQueue.h  WorkingQueue.h
(+36 files in other folders)
